--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ theme = "FixIt"
     # 是否隐藏网站图标资源链接
     noFavicon = false
     # 更现代的 SVG 网站图标，可替代旧的 .png 和 .ico 文件
-    svgFavicon = "static/favicon.ico"
+    svgFavicon = "https://s2.loli.net/2022/02/27/ZCFhVnN7MiO8Jug.png"
     # Safari 图标颜色
     iconColor = "#5bbad5"
     # Windows v8-10 磁贴颜色
