--- a/config.toml
+++ b/config.toml
@@ -15,9 +15,9 @@ theme = "FixIt"
   #  FixIt 主题版本
   version = "0.2.X"
   # 网站描述
-  description = "尝试"
+  description = "探索 记录 分享"
   # 网站关键词
-  keywords = ["Theme", "Hugo"]
+  keywords = ["YingLin", "YingLin储物柜"]
   # 网站默认主题样式 ("light", "dark", "auto")
   defaultTheme = "auto"
   # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
@@ -35,11 +35,11 @@ theme = "FixIt"
   #  应用图标配置
   [params.app]
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题，覆盖默认标题
-    title = "FixIt"
+    title = "YingLin 储物柜"
     # 是否隐藏网站图标资源链接
     noFavicon = false
     # 更现代的 SVG 网站图标，可替代旧的 .png 和 .ico 文件
-    svgFavicon = "https://s2.loli.net/2022/02/27/ZCFhVnN7MiO8Jug.png"
+    svgFavicon = ""
     # Safari 图标颜色
     iconColor = "#5bbad5"
     # Windows v8-10 磁贴颜色
@@ -73,16 +73,16 @@ theme = "FixIt"
 
   # 页面头部导航栏配置
   [params.header]
-    # 桌面端导航栏模式 ("sticky", "normal", "auto")
-    desktopMode = "sticky"
-    # 移动端导航栏模式 ("sticky", "normal", "auto")
+    # 桌面端导航栏模式 ("fixed", "normal", "auto")
+    desktopMode = "fixed"
+    # 移动端导航栏模式 ("fixed", "normal", "auto")
     mobileMode = "auto"
     #  页面头部导航栏标题配置
     [params.header.title]
       # LOGO 的 URL
       logo = ""
       # 标题名称
-      name = ""
+      name = "YingLin
       # 你可以在名称（允许 HTML 格式）之前添加其他信息，例如图标
       pre = ""
       # 你可以在名称（允许 HTML 格式）之后添加其他信息，例如图标
@@ -92,7 +92,7 @@ theme = "FixIt"
     #  页面头部导航栏副标题配置
     [params.header.subtitle]
       # 副标题名称
-      name = "YingLin"
+      name = "储物柜"
       # 是否为副标题显示打字机动画
       typeit = false
 
