--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ theme = "FixIt"
       # LOGO 的 URL
       logo = ""
       # 标题名称
-      name = "YingLin
+      name = "YingLin"
       # 你可以在名称（允许 HTML 格式）之前添加其他信息，例如图标
       pre = ""
       # 你可以在名称（允许 HTML 格式）之后添加其他信息，例如图标
