--- a/config.toml
+++ b/config.toml
@@ -167,7 +167,7 @@ theme = "FixIt"
     [params.home.posts]
       enable = true
       # 主页每页显示文章数量
-      paginate = 6
+      paginate = 10
 
   # 作者的社交信息设置
   [params.social]
@@ -253,9 +253,9 @@ theme = "FixIt"
     #  是否在搜索结果中隐藏一篇文章
     hiddenFromSearch = false
     #  是否使用 twemoji
-    twemoji = false
+    twemoji = true
     # 是否使用 lightgallery
-    lightgallery = false
+    lightgallery = true
     #  是否使用 ruby 扩展语法
     ruby = true
     #  是否使用 fraction 扩展语法
@@ -267,7 +267,7 @@ theme = "FixIt"
     # 是否在文章页面显示原始 Markdown 文档链接
     linkToMarkdown = true
     #  是否在 RSS 中显示全文内容
-    rssFullText = false
+    rssFullText = true
     #  页面样式 ("normal", "wide", ...)
     pageStyle = "normal"
     #  目录配置
@@ -294,7 +294,7 @@ theme = "FixIt"
       # 是否显示代码块的复制按钮
       copy = true
       # 默认展开显示的代码行数
-      maxShownLines = 10
+      maxShownLines = 50
     #  KaTeX 数学公式 (https://katex.org)
     [params.page.math]
       enable = true
