--- a/config.toml
+++ b/config.toml
@@ -156,7 +156,7 @@ theme = "FixIt"
       #  主页显示的网站标题（支持 HTML 格式）
       title = "YingLin notes"
       # 主页显示的网站副标题
-      subtitle = "Calm down for a minute and read"
+      subtitle = "Not Today"
       # 是否为副标题显示打字机动画
       typeit = true
       # 是否显示社交账号
